KBmenu/force-app/main/default/objects/Knowledge__kav/fields/Bug_Fixes__c.field-meta.xml
<CustomField>
    <fullName>Bug_Fixes__c</fullName>
    <label>Bug Fixes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>