KBmenu/force-app/main/default/objects/Knowledge__kav/fields/Contact_Support_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Support_Information__c</fullName>
    <defaultValue>&quot;For any issues with this feature, please reach out to us at support@automai.com&quot;</defaultValue>
    <label>Contact/Support Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>