KBmenu/force-app/main/default/objects/Knowledge__kav/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>