KBmenu/force-app/main/default/objects/Knowledge__kav/fields/Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer__c</fullName>
    <label>Instructions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>