KBmenu/force-app/main/default/objects/Knowledge__kav/fields/Feature_walkthrough__c.field-meta.xml
<CustomField>
    <fullName>Feature_walkthrough__c</fullName>
    <label>Feature walkthrough</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>