KBmenu/force-app/main/default/objects/Knowledge__kav/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <label>Features</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>