KBmenu/force-app/main/default/objects/Knowledge__kav/fields/How_to_Use__c.field-meta.xml
<CustomField>
    <fullName>How_to_Use__c</fullName>
    <label>Requirements</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>