KBmenu/force-app/main/default/objects/Knowledge__kav/fields/Properties__c.field-meta.xml
<CustomField>
    <fullName>Properties__c</fullName>
    <label>Properties</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>