KBmenu/force-app/main/default/objects/Knowledge__kav/fields/See_Also__c.field-meta.xml
<CustomField>
    <fullName>See_Also__c</fullName>
    <label>See Also</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>