KBmenu/force-app/main/default/objects/Knowledge__kav/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <label>Use Case</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>