KBmenu/force-app/main/default/objects/Knowledge__kav/recordTypes/Article.recordType-meta.xml
<RecordType>
    <fullName>Article</fullName>
    <active>true</active>
    <description>insightfull article</description>
    <label>Article</label>
</RecordType>