KBmenu/force-app/main/default/objects/Knowledge__kav/recordTypes/document.recordType-meta.xml
<RecordType>
    <fullName>document</fullName>
    <active>true</active>
    <description>Product feature documentation</description>
    <label>document</label>
</RecordType>