KBmenu/force-app/main/default/objects/Knowledge__kav/recordTypes/Document_Chcek.recordType-meta.xml
<RecordType>
    <fullName>Document_Chcek</fullName>
    <active>true</active>
    <label>Document Chcek</label>
</RecordType>