KBmenu/force-app/main/default/objects/Knowledge__kav/listViews/WinError_10061.listView-meta.xml
<ListView>
    <fullName>WinError_10061</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Articles</label>
</ListView>